# telepathy-gabble

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  Android.mk  COPYING  Makefile.am  NEWS  README  _boring  autogen.sh  check-c-style.sh  check-coding-style.mk  check-whitespace.sh  configure.ac  do_gen.sh  gabble-connection-manager.xml  gabble-connection.xml  gabble-im-channel.xml  jabber-connection-manager.xml  jabber-connection.xml  jabber-im-channel.xml  meson.build  meson_options.txt
data/: Makefile.am  gabble.manager  gabble.service.in  meson.build  org.freedesktop.Telepathy.ConnectionManager.gabble.in  org.freedesktop.Telepathy.ConnectionManager.gabble.service.in
docs/: Makefile.am  README  decloak.xml  muc-bytestream.xml  olpc.xml  si-multiple.xml  telepathy-gabble-1.8.in  telepathy-gabble.8.in  tube-caps.txt  tubes.xml
extensions/: Authentication_TLS_Certificate.xml  Call_Content.xml  Call_Content_Codec_Offer.xml  Call_Content_Interface_Media.xml  Call_Content_Interface_Mute.xml  Call_Stream.xml  Call_Stream_Endpoint.xml  Call_Stream_Interface_Media.xml  Channel_Bundle.xml  Channel_Future.xml  Channel_Interface_Conference.xml  Channel_Interface_Destroyable.xml  Channel_Interface_File_Transfer_Metadata.xml  Channel_Interface_Hold.xml  Channel_Interface_Room.xml  Channel_Interface_SASL_Authentication.xml  Channel_Interface_Sasl_Authentication.xml  Channel_Interface_Securable.xml  Channel_Interface_Subject.xml  Channel_Interface_Tube.xml  Channel_Type_Call.xml  Channel_Type_Contact_Search.xml  Channel_Type_DBusTube.xml  Channel_Type_DBus_Tube.xml  Channel_Type_FileTransfer_Future.xml  Channel_Type_Server_Authentication.xml  Channel_Type_Server_TLS_Connection.xml  Channel_Type_StreamTube.xml  Channel_Type_Stream_Tube.xml  Channel_Type_Streamed_Media_Future.xml  Channel_Type_Tubes.xml  Connection_Future.xml  Connection_Interface_Addressing.xml  Connection_Interface_Client_Type.xml  Connection_Interface_Client_Types.xml  Connection_Interface_Contact_Capabilities.xml  Connection_Interface_Contact_Info.xml  Connection_Interface_Gabble_Decloak.xml  Connection_Interface_Location.xml  Connection_Interface_Mail_Notification.xml  (+24 more)
extensions/tools/: Makefile.am  c-constants-generator.xsl  c-interfaces-generator.xsl  doc-generator.xsl  genginterface.py  ls-interfaces.xsl  make-all-async.xsl  update-spec-gen-am.sh
gabble/: Makefile.am  capabilities-set.h  capabilities.h  caps-channel-manager.h  caps-hash.h  connection.h  disco-identity.h  error.h  gabble.h  generate-wockyinclude_HEADERS  meson.build  namespaces.h  plugin-connection.h  plugin.h  sidecar.h  telepathy-gabble-1-uninstalled.pc.in  telepathy-gabble-1.pc.in  telepathy-gabble-uninstalled.pc.in  telepathy-gabble.pc.in  types.h
lib/: Makefile.am  base-connection-manager.c  base-connection.c  channel-factory-iface.c  dbus.c  debug.c  debug.h  errors.c  group-mixin.c  handle-repo-dynamic.c  handle-repo-static.c  handle-repo.c  handle-set.c  heap.c  helpers.c  intset.c  meson.build  properties-mixin.c  signals-marshal.list  spec.am  stable-interfaces.txt  telepathy-glib-unstable.pc.in  telepathy-glib.pc.in  text-mixin.c  tp-channel-factory-iface.c  tp-channel-iface.c  update-from-spec.mk  util.c
lib/_spec/: Makefile.am
lib/ext/: Makefile.am
lib/gibber/: Makefile.am  asyncns.c  gibber-debug.c  gibber-debug.h  gibber-fd-transport.c  gibber-fd-transport.h  gibber-linklocal-transport.c  gibber-linklocal-transport.h  gibber-listener.c  gibber-listener.h  gibber-resolver-asyncns.c  (+16 more)
plugins/: Makefile.am  console.c  console.h  gateways.c  gateways.h  meson.build  telepathy-gabble-1-xmpp-console  telepathy-gabble-xmpp-console  test.c  test.h
src/: Makefile.am  addressing-util.c  addressing-util.h  allocator.c  allocator.h  ansi.h  auth-manager.c  auth-manager.h  avatars.c  base-call-channel.c  base-call-channel.h  base-call-content.c  base-call-content.h  base-call-stream.c  base-call-stream.h  base-channel.c  base-channel.h  base-media-call-content.c  base-media-call-content.h  base64.c  base64.h  bundles.h  bytestream-factory.c  bytestream-factory.h  bytestream-ibb.c  bytestream-ibb.h  bytestream-iface.c  bytestream-iface.h  bytestream-muc.c  bytestream-muc.h  bytestream-multiple.c  bytestream-multiple.h  bytestream-socks5.c  bytestream-socks5.h  call-channel.c  call-channel.h  call-content-codec-offer.c  call-content-codec-offer.h  call-content-codecoffer.c  call-content-codecoffer.h  (+308 more)
tests/: Makefile.am  README  dbustesting.py  dtmf-player.c  exec-with-log.sh.in  gabbletest.py  meson.build  olpc-buddy-prop-change.py  olpc-buddy-search.py  olpc-muc-invitation.py  olpc-muc-prop-change.py  org.freedesktop.Telepathy.ConnectionManager.gabble.service.in  run-with-tmp-session-bus.conf.in  run-with-tmp-session-bus.sh  servicetest.py  test-alias-empty-vcard.py  test-alias-pep.py  test-alias.py  test-avatar-async.py  test-avatar-tokens.py  test-avatar.py  test-base64.c  test-basic-connect.py  test-basic-connect.sh  test-capabilities.py  test-caps-hash.c  test-caps-update.py  test-connect-fail.py  test-connect.py  test-disco.py  test-dtube-unique-names.c  test-gabble-idle-weak.c  test-gabble-presence.c  test-get-available-tubes.py  test-google-roster.py  test-group-race.py  test-handle-set.c  test-handles.c  test-heap.c  test-helper.py  (+36 more)
tools/: Makefile.am  README-do_gen  c-constants-gen.py  c-constants-generator.xsl  c-interfaces-generator.xsl  check-c-style.sh  check-coding-style.mk  doc-generator.xsl  flymake.mk  gen_marshal_list.py  generrors.py  gengobject.py  glib-client-gen.py  glib-client-marshaller-gen.py  glib-errors-check-gen.py  glib-errors-str-gen.py  glib-ginterface-gen.py  glib-gtypes-generator.py  glib-interfaces-body-generator.xsl  glib-interfaces-gen.py  glib-interfaces-generator.xsl  gobject-foo.py  lcov.am  libglibcodegen.py  libtpcodegen.py  log-strip.py  make-all-async.xsl  make-release-mail.py  make-version-script.py  manager-file.py  shave.mk  spec-to-introspect.xsl  telepathy-glib-env.in  telepathy-glib.supp  telepathy.am  test-wrapper.sh  update-spec-gen-am.sh  valgrind.mk  with-session-bus.sh  xep.xsl  (+1 more)
(+597 files in other folders)
